--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -113,9 +113,6 @@
 "curios.identifier.salvage_bag": "Salvage Bag",
 
 "_comment": " [CATEGORY]: MISC - NAMES",
-
-	"mmorpg.item.gem_item_name": "%1$s %2$s",
-	"mmorpg.item.consumption_item_name": "%1$s %2$s %3$s",
 	"mmorpg.buff_consumption.potion": "Potion",
 	"mmorpg.buff_consumption.meal": "Meal",
 	"mmorpg.buff_consumption.seafood": "Seafood",
@@ -841,7 +838,7 @@
 	"mmorpg.word.stats": "Stats",
 	"mmorpg.word.status_effect": "Status Effect",
 	"mmorpg.word.suppgem": "Support Gem",
-	"mmorpg.word.tags": "Tags",
+	"mmorpg.word.tags": "Tags: ",
 	"mmorpg.word.talents": "Talents",
 	"mmorpg.word.tier": "Tier",
 	"mmorpg.word.tower": "Tower",
@@ -857,10 +854,6 @@
 	"mmorpg.word.weapon": "Weapon:",
 	"mmorpg.word.wiki": "Wiki",
 	"mmorpg.word.wind": "Wind",
-	"mmorpg.word.prefix_space":  " ",
-	"mmorpg.word.suffix_space":  " ",
-	"mmorpg.word.tm_prefix_space":  " ",
-	"mmorpg.word.tm_suffix_space":  " ",
 	"mmorpg.word.tooltips_rarity": "Rarity: ",
 	"mmorpg.word.tooltips_tier": "Tier: ",
 	"mmorpg.word.tooltips_item_tier": "Item Tier: ",
