--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -110,3 +110,5 @@
 "mmorpg.one_of_a_kind.start": "Start",
 
 "curios.identifier.salvage_bag": "Salvage Bag",
+
+"mmorpg.spell.spell_tag_seperator": ", ",
