--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -112,3 +112,7 @@
 "curios.identifier.salvage_bag": "Salvage Bag",
 
 "mmorpg.spell.spell_tag_seperator": ", ",
+
+"mmorpg.buff_consumption.potion": "Potion",
+"mmorpg.buff_consumption.meal": "Meal",
+"mmorpg.buff_consumption.seafood": "Seafood",
