--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -111,3 +111,4 @@ v.5.3.7
 v.5.3.8
 
 - added random offsets for summonblockaction
+- support gem slots are now locked per player level AND spell level. 
