--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -113,9 +113,8 @@
 "curios.identifier.salvage_bag": "Salvage Bag",
 
 "_comment": " [CATEGORY]: MISC - NAMES",
-	"mmorpg.buff_consumption.potion": "Potion",
-	"mmorpg.buff_consumption.meal": "Meal",
-	"mmorpg.buff_consumption.seafood": "Seafood",
+
+	"item.mmorpg.gem_item_name": "%1$s %2$s",
 	"mmorpg.gem_rank.chipped": "Chipped",
 	"mmorpg.gem_rank.cracked": "Cracked",
 	"mmorpg.gem_rank.divine": "Divine",
@@ -742,7 +741,7 @@
 	"mmorpg.word.clicktoopen": "Click to Open",
 	"mmorpg.word.cloak": "Cloak",
 	"mmorpg.word.coat": "Coat",
-	"mmorpg.word.cooldown": "Cooldown: %1$ss",
+	"mmorpg.word.cooldown": "Cooldown: %1$s",
 	"mmorpg.word.corrupted": "Corrupted",
 	"mmorpg.word.crate": "Crate",
 	"mmorpg.word.creation": "Creation",
@@ -838,7 +837,7 @@
 	"mmorpg.word.stats": "Stats",
 	"mmorpg.word.status_effect": "Status Effect",
 	"mmorpg.word.suppgem": "Support Gem",
-	"mmorpg.word.tags": "Tags: ",
+	"mmorpg.word.tags": "Tags",
 	"mmorpg.word.talents": "Talents",
 	"mmorpg.word.tier": "Tier",
 	"mmorpg.word.tower": "Tower",
@@ -854,8 +853,6 @@
 	"mmorpg.word.weapon": "Weapon:",
 	"mmorpg.word.wiki": "Wiki",
 	"mmorpg.word.wind": "Wind",
-
-	
 
 "_comment": " [CATEGORY]: WORDS - NAMES",
 
@@ -1515,8 +1512,6 @@
 	"mmorpg.chat.tool_add_stat": "%1$s has been Upgraded to %2$s!",
 	"mmorpg.chat.tool_level_up": "%1$s has reached level %2$s!",
 
-
-
 "_comment": " [CATEGORY]: CHAT MESSAGES - NAMES",
 
 
@@ -1547,6 +1542,7 @@
 
 
 "_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
+
 	"spell.desc.arrow_barrage": "Shoot out arrows in rapid succession, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
 	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
 	"spell.desc.arrow_totem": "Summons a totem that rapidly shoots arrows, dealing [calc:arrow_totem] §6☀ Physical§7 Damage",
@@ -1880,7 +1876,6 @@
 	"mmorpg.stat_desc.weapon_damage": "Used for certain spells",
 
 "_comment": " [CATEGORY]: STATS - DESCRIPTIONS"
-
 
 
 }
