--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -605,6 +605,7 @@
 	"mmorpg.support_gem.mana_on_hit": "Mana On Hit Support Gem",
 	"mmorpg.support_gem.mana_saver_dmg": "Mana Conservation Support Gem",
 	"mmorpg.support_gem.melee_damage": "Melee Damage Support Gem",
+	"mmorpg.support_gem.minion_threat": "Minion Threat Support Gem",
 	"mmorpg.support_gem.physical_damage": "Physical Damage Support Gem",
 	"mmorpg.support_gem.physical_pene": "Physical Penetration Support Gem",
 	"mmorpg.support_gem.plus_aoe": "Expanded Area Support Gem",
@@ -621,6 +622,7 @@
 	"mmorpg.support_gem.summon_damage": "Summon Damage Support Gem",
 	"mmorpg.support_gem.summon_duration": "Summon Duration Support Gem",
 	"mmorpg.support_gem.summon_health": "Summon Health Support Gem",
+	"mmorpg.support_gem.threat": "Greater Threat Support Gem",
 	"mmorpg.support_gem.totem_damage": "Totem Damage Support Gem",
 	"mmorpg.support_gem.totem_dmg_cdr": "Primed Totems Support Gem",
 	"mmorpg.support_gem.water_pene": "Cold Penetration Support Gem",
@@ -685,6 +687,13 @@
 
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
+	"mmorpg.mob_rarity.common": "Common",
+	"mmorpg.mob_rarity.epic": "Epic",
+	"mmorpg.mob_rarity.legendary": "Legendary",
+	"mmorpg.mob_rarity.mythic": "Mythic",
+	"mmorpg.mob_rarity.rare": "Rare",
+	"mmorpg.mob_rarity.summon": "Summon",
+	"mmorpg.mob_rarity.uncommon": "Uncommon",
 	"mmorpg.rarity..common": "Common",
 	"mmorpg.rarity..epic": "Epic",
 	"mmorpg.rarity..legendary": "Legendary",
@@ -695,6 +704,52 @@
 	"mmorpg.rarity..unique": "Unique",
 
 "_comment": " [CATEGORY]: RARITIES - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
@@ -728,52 +783,6 @@
 	"mmorpg.ailment.poison": "Poison",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1239,7 +1248,7 @@
 	"mmorpg.stat.defensive_eff_duration": "\u00A77\u00A7a[VAL1]\u00A77% to duration of Defensive effects on you.",
 	"mmorpg.stat.dex_dmg": "Ranged Damage",
 	"mmorpg.stat.dex_dmg_received": "Ranged Damage Received",
-	"mmorpg.stat.dexterity": "Dexterity",
+	"mmorpg.stat.dexterity": "dexterity",
 	"mmorpg.stat.dmg_received": "Damage Received",
 	"mmorpg.stat.dmg_taken_to_mana": "Damage Taken to Mana",
 	"mmorpg.stat.dmg_to_living": "Damage To Living",
@@ -1384,7 +1393,7 @@
 	"mmorpg.stat.int_dmg": "Spell Damage",
 	"mmorpg.stat.int_dmg_per_5_strength": "\u00A7a[VAL1] \u00A7b\u2605 Spell Damage\u00A77 per 5 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.int_dmg_received": "Spell Damage Received",
-	"mmorpg.stat.intelligence": "intelligence",
+	"mmorpg.stat.intelligence": "Intelligence",
 	"mmorpg.stat.jewel_socket": "Jewel Sockets",
 	"mmorpg.stat.learn_arrow_barrage": "Learn Arrow Barrage",
 	"mmorpg.stat.learn_arrow_storm": "Learn Arrow Storm",
@@ -1602,7 +1611,7 @@
 	"mmorpg.stat.staff_spell_spell_dmg": "Staff Spell Damage",
 	"mmorpg.stat.str_dmg": "Melee Damage",
 	"mmorpg.stat.str_dmg_received": "Melee Damage Received",
-	"mmorpg.stat.strength": "Strength",
+	"mmorpg.stat.strength": "strength",
 	"mmorpg.stat.summon_cdr": "Summon Spell Cooldown Reduction",
 	"mmorpg.stat.summon_damage": "Summon Damage",
 	"mmorpg.stat.summon_duration": "Summon Duration",
