--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -114,3 +114,5 @@ v.5.3.8
 - support gem slots are now locked per player level AND spell level. 
 - added tracking radius per spell (datapack stuff)
 - reduced resonance scaling a little bit and removed charm chance
+- summons now have a custom summon rarity
+- mob rarities now datapack
