--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -116,3 +116,7 @@ v.5.3.8
 - reduced resonance scaling a little bit and removed charm chance
 - summons now have a custom summon rarity
 - mob rarities now datapack
+- fixed armor pene not scaling to level
+- buffed armor pene numbers a bit, changed some to %
+-  profession exp datapacks now have optional req list
+- new growth stage req to prevent people placing potato, breaking it instantly and gaining xp
