--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -121,3 +121,4 @@ v.5.3.8
 -  profession exp datapacks now have optional req list
 - new growth stage req to prevent people placing potato, breaking it instantly and gaining xp
 - fake players mostly used by automation mods will no longer proc mns profession item bonus drops
+- new druid spell: circle of healing. It scales healing with rejuvenation stacks on the target
