--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -218,6 +218,7 @@
 	"mmorpg.spell_tag.minion_explode": "Minion Explode",
 	"mmorpg.spell_tag.movement": "Movement",
 	"mmorpg.spell_tag.projectile": "Projectile",
+	"mmorpg.spell_tag.rejuvenate": "Rejuvenate",
 	"mmorpg.spell_tag.shield": "Shield",
 	"mmorpg.spell_tag.shout": "Shout",
 	"mmorpg.spell_tag.song": "Song",
@@ -518,6 +519,7 @@
 	"mmorpg.spell.charged_bolt": "Charged Bolt",
 	"mmorpg.spell.chilling_field": "Chilling Field",
 	"mmorpg.spell.chilling_touch": "Chilling Touch",
+	"mmorpg.spell.circle_of_healing": "Circle of Healing",
 	"mmorpg.spell.close_nova": "Close Nova",
 	"mmorpg.spell.curse_of_agony": "Curse of Agony",
 	"mmorpg.spell.curse_of_despair": "Curse of Despair",
@@ -562,6 +564,7 @@
 	"mmorpg.spell.recoil_shot": "Recoil Shot",
 	"mmorpg.spell.refresh": "Refresh",
 	"mmorpg.spell.rejuv_totem": "Rejuvenating Totem",
+	"mmorpg.spell.rejuvenation": "Rejuvenation",
 	"mmorpg.spell.resonance": "Resonance",
 	"mmorpg.spell.return_summons": "Return Summons",
 	"mmorpg.spell.ritardando": "Ritardando",
@@ -725,44 +728,44 @@
 
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -1191,8 +1194,8 @@
 	"mmorpg.stat.area_spell_dmg": "Area Damage",
 	"mmorpg.stat.armor": "Armor",
 	"mmorpg.stat.armor_penetration": "Armor Penetration",
-	"mmorpg.stat.armor_per_10_dodge": "\u00A7a[VAL1] \u00A79\u2748 Armor\u00A77 per 10 \u00A72\u2748 Dodge Rating\u00A77",
-	"mmorpg.stat.armor_per_10_mana": "\u00A7a[VAL1] \u00A79\u2748 Armor\u00A77 per 10 \u00A79\u262F Mana\u00A77",
+	"mmorpg.stat.armor_per_10_dodge": "\u00A7a[VAL1] \u00A79\u2605 Armor\u00A77 per 10 \u00A72\u2748 Dodge Rating\u00A77",
+	"mmorpg.stat.armor_per_10_mana": "\u00A7a[VAL1] \u00A79\u2605 Armor\u00A77 per 10 \u00A79\u262F Mana\u00A77",
 	"mmorpg.stat.arrow_cdr": "Arrow Spell Cooldown Reduction",
 	"mmorpg.stat.arrow_spell_dmg": "Arrow Damage",
 	"mmorpg.stat.attack_damage": "Attack Damage",
@@ -1405,7 +1408,7 @@
 	"mmorpg.stat.int_dmg": "Spell Damage",
 	"mmorpg.stat.int_dmg_per_5_strength": "\u00A7a[VAL1] \u00A7b\u2605 Spell Damage\u00A77 per 5 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.int_dmg_received": "Spell Damage Received",
-	"mmorpg.stat.intelligence": "intelligence",
+	"mmorpg.stat.intelligence": "Intelligence",
 	"mmorpg.stat.jewel_socket": "Jewel Sockets",
 	"mmorpg.stat.learn_arrow_barrage": "Learn Arrow Barrage",
 	"mmorpg.stat.learn_arrow_storm": "Learn Arrow Storm",
@@ -1420,6 +1423,7 @@
 	"mmorpg.stat.learn_charged_bolt": "Learn Charged Bolt",
 	"mmorpg.stat.learn_chilling_field": "Learn Chilling Field",
 	"mmorpg.stat.learn_chilling_touch": "Learn Chilling Touch",
+	"mmorpg.stat.learn_circle_of_healing": "Learn Circle of Healing",
 	"mmorpg.stat.learn_close_nova": "Learn Close Nova",
 	"mmorpg.stat.learn_curse_of_agony": "Learn Curse of Agony",
 	"mmorpg.stat.learn_curse_of_despair": "Learn Curse of Despair",
@@ -1464,6 +1468,7 @@
 	"mmorpg.stat.learn_recoil_shot": "Learn Recoil Shot",
 	"mmorpg.stat.learn_refresh": "Learn Refresh",
 	"mmorpg.stat.learn_rejuv_totem": "Learn Rejuvenating Totem",
+	"mmorpg.stat.learn_rejuvenation": "Learn Rejuvenation",
 	"mmorpg.stat.learn_resonance": "Learn Resonance",
 	"mmorpg.stat.learn_return_summons": "Learn Return Summons",
 	"mmorpg.stat.learn_ritardando": "Learn Ritardando",
@@ -1590,6 +1595,9 @@
 	"mmorpg.stat.projectile_damage": "Projectile Damage",
 	"mmorpg.stat.projectile_damage_per_5_strength": "\u00A7a[VAL1] \u00A7c\u27B9 Projectile Damage\u00A77 per 5 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.projectile_spell_dmg": "Projectile Damage",
+	"mmorpg.stat.rejuv_eff_on_self": "Rejuvenation Healing",
+	"mmorpg.stat.rejuvenate_cdr": "Rejuvenate Spell Cooldown Reduction",
+	"mmorpg.stat.rejuvenate_spell_dmg": "Rejuvenate Damage",
 	"mmorpg.stat.salvaging_core_drop_bonus": "Core Drops",
 	"mmorpg.stat.salvaging_double_drop": "Double Drop Chance",
 	"mmorpg.stat.salvaging_exp_bonus": "Profession Exp Bonus",
@@ -1678,6 +1686,46 @@
 "_comment": " [CATEGORY]: FORMATTER - NAMES",
 
 
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
@@ -1727,46 +1775,6 @@
 	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
-	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
-	"mmorpg.gear_type.plate_pants": "Plate Pants",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Tower Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.tome": "Tome",
-	"mmorpg.gear_type.totem": "Totem",
-	"mmorpg.gearslot.boots": "Boots",
-	"mmorpg.gearslot.bow": "Bow",
-	"mmorpg.gearslot.chest": "Chest",
-	"mmorpg.gearslot.crossbow": "Crossbow",
-	"mmorpg.gearslot.helmet": "Helmet",
-	"mmorpg.gearslot.necklace": "Necklace",
-	"mmorpg.gearslot.pants": "Pants",
-	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.shield": "Shield",
-	"mmorpg.gearslot.staff": "Staff",
-	"mmorpg.gearslot.sword": "Sword",
-	"mmorpg.gearslot.tome": "Tome",
-	"mmorpg.gearslot.totem": "Totem",
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -2087,6 +2095,8 @@
 	"mmorpg.stat_desc.proj_dmg_received": "Affects projectile damage, includes projectile spells like fireballs, and ranged basic attacks.",
 	"mmorpg.stat_desc.projectile_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.projectile_damage": "Affects projectile damage, includes projectile spells like fireballs, and ranged basic attacks.",
+	"mmorpg.stat_desc.rejuv_eff_on_self": "Increases Rejuvenation related heals on you.",
+	"mmorpg.stat_desc.rejuvenate_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.salvaging_core_drop_bonus": "Prof drops are split into categories, this stat increases the droprate of one such",
 	"mmorpg.stat_desc.salvaging_double_drop": "Chance for profession to double the drop, if it happens",
 	"mmorpg.stat_desc.salvaging_exp_bonus": "Bonus Profession Exp",
@@ -2149,6 +2159,7 @@
 	"spell.desc.charged_bolt": "Shoot a slowing charged arrow that goes through enemies and deals [calc:charged_bolt] \u00A7e\u2600 Lightning\u00A77 Damage in a radius along its path.",
 	"spell.desc.chilling_field": "Spawn a cloud of bone-chilling frost, damaging enemies for [calc:chilling_field]\u00A7b\u2600 Cold\u00A77 Damage every second and applying slow.",
 	"spell.desc.chilling_touch": "Strike enemies in front for [calc:chilling_touch] \u00A7b\u2600 Cold\u00A77 Damage, and command your summons to attack them.",
+	"spell.desc.circle_of_healing": "Rejuvenate allies around you for [calc:circle_of_healing] health",
 	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] \u00A75\u2600 Chaos\u00A77 Damage",
 	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] \u00A75\u2600 Chaos\u00A77 Damage",
 	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] \u00A75\u2600 Chaos\u00A77 Damage",
@@ -2180,7 +2191,6 @@
 	"spell.desc.magma_flower": "Summon a flaming totem that deals [calc:magma_flower]\u00A7c\u2600 Fire\u00A77 Damage in an area every second.",
 	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] \u00A7c\u2600 Fire\u00A77 Damage in an area.",
 	"spell.desc.meteor_arrow": "Shoots an arrow that deals [calc:meteor] \u00A76\u2600 Physical\u00A77 Damage and summons a meteor that deals [calc:meteor] \u00A7c\u2600 Fire\u00A77 Damage",
-	"spell.desc.nature_balm": "Gives buff that heals nearby allies for [calc:nature_balm] every second.",
 	"spell.desc.pet_basic": "Basic Attack dealing [calc:pet_basic] \u00A76\u2600 Physical\u00A77 Damage to single enemy.",
 	"spell.desc.poison_ball": "Blast out a ball of poison, dealing [calc:poisonball] \u00A75\u2600 Chaos\u00A77 Damage",
 	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] \u00A75\u2600 Chaos\u00A77 Damage to nearby enemies.",
@@ -2191,6 +2201,7 @@
 	"spell.desc.recoil_shot": "Flip backwards while shooting an arrow that deals [calc:explosive_arrow] \u00A7c\u2600 Fire\u00A77 Damage and applies Wounds in an area.",
 	"spell.desc.refresh": "Refreshes all your cooldowns by 1 minute.",
 	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
+	"spell.desc.rejuvenation": "Gives buff that heals nearby allies for [calc:nature_balm] every second.",
 	"spell.desc.resonance": "Throw out a ball of music, dealing [calc:resonance] \u00A76\u2600 Physical\u00A77 DamageHits against charmed enemies explode.",
 	"spell.desc.return_summons": "Regroup your summons and heal them for [calc:healing_aura] health.",
 	"spell.desc.ritardando": "Throw out a slow wave of sound, exploding upon contact and dealing [calc:ritardando] \u00A76\u2600 Physical\u00A77 Damage and slowing enemies in an area.",
