--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -122,3 +122,9 @@ v.5.3.8
 - new growth stage req to prevent people placing potato, breaking it instantly and gaining xp
 - fake players mostly used by automation mods will no longer proc mns profession item bonus drops
 - new druid spell: circle of healing. It scales healing with rejuvenation stacks on the target
+- tried to separate overlay guis so they can be moved independently
+- added garden of thorns ability and inner calm effect
+- druid now hopefully has a bit of a "rotation". Rejuv gives you dot healing but also increases your thorn damage.
+You scale with energy on both healing and damage and can basic attack mobs to proc extra damage from thorns.
+When you're out of mana, you have garden of thorns to deal damage and give you an effect that restores mana which scales with your energy.
+Hopefully this will be more fun than the generic spells of before, I hope I can rework existing spells to work similarly.
