--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -149,3 +149,4 @@ v.5.3.9
 - fix totem duration stat
 - tweaked pet targetting
 - maps now gen larger radius around you but limit generation to 3 chunks per tick (will this help, not sure)
+- you can now use cloth etc soul modifiers that make it so your soul item always creates cloth gear for example
