remove the line for now removed player_levelup item

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -1,10 +1,12 @@
 {
-	"infinite_dungeons.reward_list.gem_box": "Lucky Gem Bag",
-	"infinite_dungeons.reward_list.gear_crate": "Lucky Gear Bag",
-	"infinite_dungeons.reward_list.upgrade_box": "Upgrade Material Bag",
-	"infinite_dungeons.reward_list.any_slot_gear_crate": "Tailor Made Gear Bag",
+	"infinite_dungeons.reward_list.gem_box": "幸运宝石袋",
+	"infinite_dungeons.reward_list.gear_crate": "幸运装备袋",
+	"infinite_dungeons.reward_list.upgrade_box": "升级材料袋",
+	"infinite_dungeons.reward_list.any_slot_gear_crate": "手造装备袋",
 
-	"block.mmorpg.egg_loot_crate": "战利品奖励箱",
+	"item.mmorpg.custom_loot_crate": "战利品奖励箱",
+	"item.mmorpg.loot_crate": "战利品奖励箱",
+	"item.mmorpg.custom_crate": "装备奖励箱",
 
 	"block.mmorpg.ore_block0": "凡品矿石",
 	"block.mmorpg.ore_block1": "下品矿石",
@@ -21,22 +23,25 @@
 	"itemGroup.mmorpg_currency": "锻造物品",
 	"itemGroup.mmorpg_lootboxes": "战利品盒",
 	"itemGroup.mmorpg_alchemy": "药水",
-	"death.attack.mmorpg.custom_damage": "巨量伤害！",
+
+	"death.attack.mmorpg.custom_damage": "成吨的伤害！",
+	"death.attack.death_potion": "%1$s 居然觉得喝下名字上带着“死亡”俩字的药水是个好主意。",
+
 	"_comment": "STATIONS",
 	"block.mmorpg.modify_station": "装备强化台",
 	"block.mmorpg.repair_station": "装备修理台",
 	"block.mmorpg.socket_station": "装备镶嵌台",
 	"block.mmorpg.salvage_station": "装备回收台",
+
 	"_comment": "ITEM TOOLTIPS",
 	"mmorpg.tooltip.item_modifiable_in_station": "可以在装备强化台中使用",
-	"mmorpg.tooltip.lootbox": "基于大小获得不同数量的物品",
-	"mmorpg.tooltip.player_levelup": "如果你的砍杀经验已满，右键此物品突破等级吧!",
+	"mmorpg.tooltip.lootbox": "会开出来什么呢？",
+	"mmorpg.tooltip.player_levelup": "当你的经验值攒满之后，便可以右键使用该物品进行升级。",
 	"mmorpg.tooltip.capacitor": "放在装备修理台中以减少燃料的消耗.",
 	"mmorpg.tooltip.capacitor2": "燃料消耗比率",
-	"mmorpg.tooltip.socketable_item": "这个宝石可以插入插槽",
+	"mmorpg.tooltip.socketable_item": "该宝石可以放入插槽中",
 	"_comment": "RARITY ITEM NAMES",
 	"_comment": "MISC ITEMS",
-	"item.mmorpg.player_levelup": "玩家升级令牌",
 	"item.mmorpg.loot_bag": "装备战利品袋",
 	"item.mmorpg.map_bag": "地图袋",
 	"item.mmorpg.currency_bag": "通货袋",
