Decide to change the quality naming
common:普通级
uncommon:精良级
rare:稀有级
epic:史诗级
legendary:传说级
mythic:神话级

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -10,12 +10,12 @@
 	"item.mmorpg.loot_crate": "战利品奖励箱",
 	"item.mmorpg.custom_crate": "装备奖励箱",
 	
-	"block.mmorpg.ore_block0": "凡品矿石",
-	"block.mmorpg.ore_block1": "下品矿石",
-	"block.mmorpg.ore_block2": "中品矿石",
-	"block.mmorpg.ore_block3": "上品矿石",
-	"block.mmorpg.ore_block4": "精品矿石",
-	"block.mmorpg.ore_block5": "珍品矿石",
+	"block.mmorpg.ore_block0": "普通级矿石",
+	"block.mmorpg.ore_block1": "精良级矿石",
+	"block.mmorpg.ore_block2": "稀有级矿石",
+	"block.mmorpg.ore_block3": "史诗级矿石",
+	"block.mmorpg.ore_block4": "传说级矿石",
+	"block.mmorpg.ore_block5": "神话级矿石",
 	"_comment": "# CREATIVE TAB",
 	"itemGroup.mmorpg.main_group": "流放时代",
 	"itemGroup.mmorpg.gem_group": "流放时代 - 宝石",
@@ -24,7 +24,7 @@
 	"itemGroup.mmorpg_uniques": "特殊装备",
 	"itemGroup.mmorpg_currency": "锻造物品",
 	"itemGroup.mmorpg_lootboxes": "战利品盒",
-	"itemGroup.mmorpg_alchemy": "药水",
+	"itemGroup.mmorpg_alchemy": "炼金术",
 	
 	"death.attack.mmorpg.custom_damage": "成吨的伤害！",
 	"death.attack.death_potion": "%1$s 居然觉得喝下名字上带着“死亡”俩字的药水是个好主意。",
@@ -163,21 +163,21 @@
 	"mmorpg.mob_affix.vampire": "§c❁",
 	"mmorpg.mob_affix.water_mob_affix": "§b❉",
 	"mmorpg.mob_affix.winter": "§b❉",
-	"item.mmorpg.alchemy.potion.health.0": "Spiritual Health Potion",
-	"item.mmorpg.alchemy.potion.health.1": "Celestial Health Potion",
-	"item.mmorpg.alchemy.potion.health.2": "Empyrean Health Potion",
-	"item.mmorpg.alchemy.potion.health.3": "Angelic Health Potion",
-	"item.mmorpg.alchemy.potion.health.4": "Divine Health Potion",
-	"item.mmorpg.alchemy.potion.mana.0": "Spiritual Mana Potion",
-	"item.mmorpg.alchemy.potion.mana.1": "Celestial Mana Potion",
-	"item.mmorpg.alchemy.potion.mana.2": "Empyrean Mana Potion",
-	"item.mmorpg.alchemy.potion.mana.3": "Angelic Mana Potion",
-	"item.mmorpg.alchemy.potion.mana.4": "Divine Mana Potion",
-	"item.mmorpg.backpack.material_pouch": "Material Pouch",
-	"item.mmorpg.backpack.normal": "Adventurer's Backpack",
-	"item.mmorpg.backpack.upgrade.auto_sal0": "Auto Salvage Commons Upgrade",
-	"item.mmorpg.backpack.upgrade.auto_sal1": "Auto Salvage Uncommons Upgrade",
-	"item.mmorpg.backpack.upgrade.auto_sal2": "Auto Salvage Rares Upgrade",
+	"item.mmorpg.alchemy.potion.health.0": "灵魂的生命药水",
+	"item.mmorpg.alchemy.potion.health.1": "天界的生命药水",
+	"item.mmorpg.alchemy.potion.health.2": "帝王的生命药水",
+	"item.mmorpg.alchemy.potion.health.3": "天使的生命药水",
+	"item.mmorpg.alchemy.potion.health.4": "神圣的生命药水",
+	"item.mmorpg.alchemy.potion.mana.0": "灵魂的法力药水",
+	"item.mmorpg.alchemy.potion.mana.1": "天界的法力药水",
+	"item.mmorpg.alchemy.potion.mana.2": "帝王的法力药水",
+	"item.mmorpg.alchemy.potion.mana.3": "天使的法力药水",
+	"item.mmorpg.alchemy.potion.mana.4": "神圣的法力药水",
+	"item.mmorpg.backpack.material_pouch": "材料包",
+	"item.mmorpg.backpack.normal": "冒险者的背包",
+	"item.mmorpg.backpack.upgrade.auto_sal0": "自动回收普通级升级",
+	"item.mmorpg.backpack.upgrade.auto_sal1": "自动回收精良级升级",
+	"item.mmorpg.backpack.upgrade.auto_sal2": "自动回收稀有级升级",
 	"item.mmorpg.backpack.upgrade.currency3": "Auto Currency Pickup Upgrade",
 	"item.mmorpg.backpack.upgrade.essence0": "Auto Essence Pickup Upgrade",
 	"item.mmorpg.backpack.upgrade.gem1": "Auto Gem Pickup Upgrade",
