--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -178,8 +178,8 @@
 	"item.mmorpg.backpack.upgrade.auto_sal0": "自动回收普通级升级",
 	"item.mmorpg.backpack.upgrade.auto_sal1": "自动回收精良级升级",
 	"item.mmorpg.backpack.upgrade.auto_sal2": "自动回收稀有级升级",
-	"item.mmorpg.backpack.upgrade.currency3": "Auto Currency Pickup Upgrade",
-	"item.mmorpg.backpack.upgrade.essence0": "Auto Essence Pickup Upgrade",
+	"item.mmorpg.backpack.upgrade.currency3": "自动通货拾取升级",
+	"item.mmorpg.backpack.upgrade.essence0": "自动源质拾取升级",
 	"item.mmorpg.backpack.upgrade.gem1": "Auto Gem Pickup Upgrade",
 	"item.mmorpg.backpack.upgrade.rune2": "Auto Rune Pickup Upgrade",
 	"item.mmorpg.backpack.upgrade.save1": "Save Important Items Upgrade",
